[project]
name = "ble-vo2-stream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bleak>=2.1.1",
    "numpy>=2.2.6",
    "pyqtgraph>=0.14.0",
    "pyqt5>=5.15.11; sys_platform != 'win32'",
    "pyside6>=6.7; sys_platform == 'win32'",
    "scipy>=1.7.0",
]
